--- a/style/style.css
+++ b/style/style.css
@@ -47,3 +47,57 @@ nav ul li a:hover {
     color: #1b1b1b;
     background-color: #fff;
 }
+
+/* BOTÃO DE MENU MOBILE */
+nav .menu-btn i {
+    color: #fff;
+    font-size: 22px;
+    cursor: pointer;
+    display: none;
+}
+
+#click {
+    display: none;
+}
+
+@media (max-width: 940px) {
+    nav .menu-btn i {
+        display: block;
+    }
+
+    #click:checked~.menu-btn i:before {
+        content: "\f00d";
+    }
+
+    nav ul {
+        position: fixed;
+        top: 80px;
+        left: 0;
+        background-color: #111;
+        height: 100vh;
+        width: 100%;
+        display: none;
+        text-align: center;
+    }
+
+    #click:checked~ul {
+        display: block;
+        transition: all .3s ease;
+    }
+
+    nav ul li {
+        margin: 40px 0;
+    }
+
+    nav ul li a {
+        font-size: 30px;
+    }
+
+    nav ul li .active,
+    nav ul li a:hover {
+        color: cyan;
+        background: none;
+    }
+
+
+}
